// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cellMeta Sets error state on expression error action 1`] = `
{
  "doubletScores": {
    "data": [],
    "error": false,
    "loading": true,
  },
  "mitochondrialContent": {
    "data": [],
    "error": "error",
    "loading": false,
  },
  "numOfGenes": {
    "data": [],
    "error": false,
    "loading": true,
  },
  "numOfUmis": {
    "data": [],
    "error": false,
    "loading": true,
  },
}
`;

exports[`cellMeta Sets loaded state on expression loading action 1`] = `
{
  "doubletScores": {
    "data": [],
    "error": false,
    "loading": true,
  },
  "mitochondrialContent": {
    "data": [
      1,
      2,
      3,
    ],
    "error": false,
    "loading": false,
  },
  "numOfGenes": {
    "data": [],
    "error": false,
    "loading": true,
  },
  "numOfUmis": {
    "data": [],
    "error": false,
    "loading": true,
  },
}
`;

exports[`cellMeta Sets loading state on expression loading action 1`] = `
{
  "doubletScores": {
    "data": [],
    "error": false,
    "loading": true,
  },
  "mitochondrialContent": {
    "data": [],
    "error": false,
    "loading": true,
  },
  "numOfGenes": {
    "data": [],
    "error": false,
    "loading": true,
  },
  "numOfUmis": {
    "data": [],
    "error": false,
    "loading": true,
  },
}
`;
